--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -24,12 +22,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
+  <title>React App</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -39,5 +38,154 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+</body>
+<script>
+  const food = 'chips'
+  const number1 = 5
+  const numberToString = number1.toString()
+  console.log((5).toString() + numberToString) //55
+  const strNum = '3'
+  console.log(Number(strNum) + 3)
+  const obj = {
+    name: "Yuo",
+    age: 45
+  }
+  const obj2 = {}
+  Object.assign(obj2, {
+    ...obj
+  }, {
+    name: 'Yapa',
+    nation: 'Uganda',
+    food,
+    car: {
+      brand: "GM"
+    }
+  })
+  const obj3 = {
+    ...obj2,
+    name: 'Michael'
+  }
+  console.log(obj2)
+  console.log(obj3)
+
+  function printing({
+    name,
+    nation,
+    car: {
+      brand
+    }
+  }) {
+    console.log(name, nation, brand)
+  }
+  printing(obj2)
+
+  let total = 0
+
+  const adding = (num1, num2) => {
+    return new Promise(callBack => {
+      setTimeout(() => {
+        total = num1 + num2
+        callBack(total)
+        // return total
+      }, 2500)
+    })
+  }
+
+  adding(3, 4).then(res => {
+    console.log(total)
+  })
+
+  function subtracting(num1, num2) {
+    return new Promise((resolve, reject) => {
+      setTimeout(() => {
+        let total3 = num1 - num2
+        console.log(total3)
+        resolve(total3)
+      }, 1700)
+      reject('error bley')
+    })
+
+  }
+  async function doTask() {
+    try {
+      console.log(await subtracting(67, 43))
+    } catch (error) {
+      console.error(error)
+    }
+  }
+
+
+
+  doTask()
+
+  let myPromise = new Promise((resolve, reject) => {
+    let value = 0;
+
+    setTimeout(() => {
+      if (value === 0) {
+        resolve("Ooops")
+      } else {
+        reject("Cool")
+      }
+    }, 1000)
+  })
+
+  myPromise.then(
+    function (value) {
+      console.log(value)
+    },
+    function (msg) {
+      alert(msg)
+    }
+  )
+
+  function throwing(value) {
+    if (value > 0) {
+      console.log('success')
+    } else {
+      throw new Error('value invalid')
+    }
+  }
+
+  try {
+    throwing(3)
+  } catch (error) {
+    console.error(error)
+  }
+
+  function throwing(value) {
+    if (value > 0) {
+      console.log('value valid')
+    } else {
+      throw new Error('value invalid')
+    }
+  }
+
+  try {
+    throwing(0)
+  } catch (error) {
+    console.error(error)
+  }
+  const str = 'This is a string'
+  console.log({
+    ...str
+  })
+  const arrNeg = [0, 1, 2]
+  arrNeg[-1] = -1
+  console.log(arrNeg)
+
+  const advObj = {
+    name: 'Paul',
+    age: '45',
+    country: "Israel"
+  }
+  let advArr = Object.entries(advObj)
+    .map(([k, v]) => [k, (...args) => console.log(...args, v)])
+    .reduce((result, [k, v]) => ({
+      ...result,
+      [k]: v
+    }), {})
+  console.log(advArr.age(3))
+</script>
+
 </html>
